WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151960
[WK2] Regression(
r187691
): If a page is showing an auth pane in one tab, any new tabs with same page hang until credentials are entered in first tab
https://bugs.webkit.org/show_bug.cgi?id=151960
Summary
[WK2] Regression(r187691): If a page is showing an auth pane in one tab, any ...
Chris Dumez
Reported
2015-12-07 12:56:17 PST
If a page is showing an auth pane in one tab, any new tabs with same page hang until credentials are entered in first tab. This is a regression from <
http://trac.webkit.org/changeset/187691
>.
Attachments
Patch
(7.68 KB, patch)
2015-12-07 13:02 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-12-07 12:56:44 PST
rdar://problem/23618112
Chris Dumez
Comment 2
2015-12-07 13:02:19 PST
Created
attachment 266800
[details]
Patch
Alex Christensen
Comment 3
2015-12-07 13:06:04 PST
Comment on
attachment 266800
[details]
Patch r=me
Alexey Proskuryakov
Comment 4
2015-12-07 13:16:11 PST
Comment on
attachment 266800
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=266800&action=review
> Source/WebKit2/ChangeLog:14 > + same domain, no matter what tab they are for. This can be confusing > + so we now only coalesce authentication challenges within each tab, > + by leveraging the pageID (in addition to the domain).
Hmm, so this means that the user will once again get a ton of authentication requests when relaunching Safari. That's not a good experience either.
Chris Dumez
Comment 5
2015-12-07 13:20:50 PST
(In reply to
comment #4
)
> Comment on
attachment 266800
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=266800&action=review
> > > Source/WebKit2/ChangeLog:14 > > + same domain, no matter what tab they are for. This can be confusing > > + so we now only coalesce authentication challenges within each tab, > > + by leveraging the pageID (in addition to the domain). > > Hmm, so this means that the user will once again get a ton of authentication > requests when relaunching Safari. That's not a good experience either.
Well, before coalescing, they would get several auth panes per tab. Now they can get maximum one auth pane per tab. I think this is a good compromise. The situation where you end up having blank tabs stuck due to an authentication request in another tab (that is not visible) is worse IMHO.
WebKit Commit Bot
Comment 6
2015-12-07 14:44:52 PST
Comment on
attachment 266800
[details]
Patch Clearing flags on attachment: 266800 Committed
r193654
: <
http://trac.webkit.org/changeset/193654
>
WebKit Commit Bot
Comment 7
2015-12-07 14:44:57 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug